--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,8 @@
     </modules>
 
     <scm>
+        <connection>scm:git:https://github.com/shiver-me-timbers/${project.artifactId}.git</connection>
         <developerConnection>scm:git:git@github.com:shiver-me-timbers/${project.artifactId}.git</developerConnection>
+        <url>https://github.com/shiver-me-timbers/${project.artifactId}</url>
     </scm>
 </project>
