--- a/smt-tomcat7-junit-runner/pom.xml
+++ b/smt-tomcat7-junit-runner/pom.xml
@@ -45,14 +45,25 @@
             <version>${tomcat.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>2.4</version>
         </dependency>
         <dependency>
             <groupId>shiver.me.timbers</groupId>
             <artifactId>smt-servlet-junit-runner-test</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
