--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>shiver.me.timbers</groupId>
+        <groupId>com.github.shiver-me-timbers</groupId>
         <artifactId>smt-parent-pom</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath/>
