--- a/smt-servlet-junit-runner/pom.xml
+++ b/smt-servlet-junit-runner/pom.xml
@@ -29,7 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>shiver.me.timbers</groupId>
+        <groupId>com.github.shiver-me-timbers</groupId>
         <artifactId>smt-servlet-junit-runner-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
