--- a/smt-tomcat7-junit-runner/pom.xml
+++ b/smt-tomcat7-junit-runner/pom.xml
@@ -29,7 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>shiver.me.timbers</groupId>
+        <groupId>com.github.shiver-me-timbers</groupId>
         <artifactId>smt-servlet-junit-runner-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -50,7 +50,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>shiver.me.timbers</groupId>
+            <groupId>com.github.shiver-me-timbers</groupId>
             <artifactId>smt-servlet-junit-runner</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -80,7 +80,7 @@
             <version>2.4</version>
         </dependency>
         <dependency>
-            <groupId>shiver.me.timbers</groupId>
+            <groupId>com.github.shiver-me-timbers</groupId>
             <artifactId>smt-servlet-junit-runner-test</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
