--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <module>smt-servlet-junit-runner</module>
         <module>smt-servlet-junit-runner-test</module>
         <module>smt-tomcat7-junit-runner</module>
+        <module>smt-tomcat8-junit-runner</module>
     </modules>
 
     <scm>
