--- a/smt-tomcat-junit-runner-parent/smt-tomcat-junit-runner/pom.xml
+++ b/smt-tomcat-junit-runner-parent/smt-tomcat-junit-runner/pom.xml
@@ -30,45 +30,52 @@
 
     <parent>
         <groupId>com.github.shiver-me-timbers</groupId>
-        <artifactId>smt-servlet-junit-runner-parent</artifactId>
+        <artifactId>smt-tomcat-junit-runner-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>smt-tomcat-junit-runner-parent</artifactId>
+    <artifactId>smt-tomcat-junit-runner</artifactId>
 
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
 
-    <description>The parent of the Tomcat JUnit runners, it contains the all common dependencies and helps group the
-        child projects.
+    <description>
+        This is the common API that contains all the shared logic for the different Tomcat version implementations.
+        This should not be added directly to your test scope, use one of the version specific dependencies instead.
     </description>
+
+    <properties>
+        <tomcat.version>7.0.57</tomcat.version>
+    </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.github.shiver-me-timbers</groupId>
-            <artifactId>smt-servlet-junit-runner</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>${tomcat.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.shiver-me-timbers</groupId>
-            <artifactId>smt-servlet-junit-runner-test</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-logging-juli</artifactId>
+            <version>${tomcat.version}</version>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>1.1.2</version>
-            <scope>test</scope>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <version>${tomcat.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
         </dependency>
     </dependencies>
-
-    <modules>
-        <module>smt-tomcat-junit-runner</module>
-        <module>smt-tomcat7-junit-runner</module>
-        <module>smt-tomcat8-junit-runner</module>
-    </modules>
 </project>
