--- a/smt-tomcat-junit-runner-parent/smt-tomcat7-junit-runner/pom.xml
+++ b/smt-tomcat-junit-runner-parent/smt-tomcat7-junit-runner/pom.xml
@@ -50,6 +50,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.shiver-me-timbers</groupId>
+            <artifactId>smt-tomcat-junit-runner</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
             <version>${tomcat.version}</version>
@@ -63,11 +68,6 @@
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
             <version>${tomcat.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.4</version>
         </dependency>
     </dependencies>
 </project>
