--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <parent>
         <groupId>com.github.shiver-me-timbers</groupId>
         <artifactId>smt-parent-pom</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.3-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
@@ -47,7 +47,7 @@
         This is the parent project for all of the different JUnit servlet runners.
     </description>
 
-    <url>http://shiver-me-timbers.github.io/${project.artifactId}/</url>
+    <url>http://shiver-me-timbers.github.io/smt-servlet-junit-runner-parent/</url>
 
     <build>
         <plugins>
@@ -67,7 +67,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
